# padai

./: HI  HI.C  README.md  f.  f..c  inheretance  inheretance.cpp  tempCodeRunnerFile
C/: CMakeLists.txt  ansh.c  ase  ase.c  main.cpp
C/Anshdeep Rawat/: q21
C/Anshdeep Rawat/G1/Roll No -10/: code  ffff.c  q1  q1.c  q10  q10.c  q11  q11.c  q12  q12.c  q13  q13.c  q14  q14.c  q15  q15.c  q16  q16.c  q17  q17.c  q18  q18.c  q19  q19.c  q2  q2.c  q20  q20.c  q21  q21.c  q22  q22.c  q23  q23.c  q24.c  q25  q25.c  q26  q26.c  q27  (+19 more)
C/codes/: f.cpp  fghjk.c  hello.cpp  linkdelist.c
C/codes/practice/: doubli  doubli.c  singli  singli.c
C/dsa/: menudriven  menudriven.c
DSA/Doubly linked list/: delete  delete.c  insertation  insertation.c  linkedlist  linkedlist.c  reverse  reverse.c
DSA/TREES/: BST  BST.c
DSA/singli linked list/: deletion  deletion.c  insertion  insertion.c  linkedlist  linkedlist.c  reverse.c
DSA_trem_work/: q1
DSA_trem_work/final/: q1  q1.c  q2  q2.c  q3.c  q4  q4.c  q5  q5.c  q6  q6.c  q8.c  tempCodeRunnerFile.c
DSA_trem_work/not self/: q2  q2.c  q3  q3.c
DSA_trem_work/self/: q  q1  q1.c  q2  q2.c  q3  q3.c  q4  q4.c  q5  q5.c  q6  q6.c  q7  q7.c  (+5 more)
OOPS assignment/: HEDDER.h  HEDDER.h.gch  Q15  a.out  fuck  headder.cpp  hedder  hello.txt  newfile.txt  q1  q1.cpp  q10  q10.cpp  q11  q11.cpp  q12  q12.cpp  q13  q13.cpp  q14  q14.cpp  q15  q15.cpp  q16  q16.cpp  q17.CPP  q18  q18.cpp  q19  q19.cpp  q2  q2.cpp  q20  q20.cpp  q21  q21.cpp  q3  q3.cpp  q4  q4.cpp  (+11 more)
dsalab/: 11nov  11nov.c
maths/: q1  q1.c  q2  q2.c  q3  q3.c
sem 4/: rawat.c
(+56 files in other folders)
